--- a/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal - CoreData/Journal - CoreData/Storyboard/Base.lproj/Main.storyboard
@@ -71,63 +71,85 @@
             </objects>
             <point key="canvasLocation" x="720" y="112"/>
         </scene>
-        <!--Title-->
+        <!--Create Entry-->
         <scene sceneID="xor-qD-Xhv">
             <objects>
-                <viewController id="aVG-wK-7JU" customClass="EntryDetailViewController" customModule="Journal___CoreData" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="aVG-wK-7JU" customClass="CreateEntryViewController" customModule="Journal___CoreData" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="epj-U2-AA5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="P6O-Yr-C4d">
-                                <rect key="frame" x="20" y="160" width="374" height="32"/>
-                                <segments>
-                                    <segment title="☹️"/>
-                                    <segment title="😐"/>
-                                    <segment title="🙂"/>
-                                </segments>
-                            </segmentedControl>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YRs-ba-A2G">
-                                <rect key="frame" x="20" y="211" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ERx-64-WoI">
-                                <rect key="frame" x="20" y="262" width="374" height="250"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="TO7-mT-Ck4"/>
-                                </constraints>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ukB-dS-mqr">
+                                <rect key="frame" x="20" y="10" width="374" height="323"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="bvt-g9-suU">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Low"/>
+                                            <segment title="Normal"/>
+                                            <segment title="High"/>
+                                            <segment title="Critical"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSi-eY-bmx">
+                                        <rect key="frame" x="0.0" y="45" width="374" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oxY-lw-OOZ">
+                                        <rect key="frame" x="0.0" y="81" width="374" height="242"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zWv-cM-wpN">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="17"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Scz-if-eqM">
+                                                <rect key="frame" x="0.0" y="25" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="ggf-a7-bO0"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VJY-2u-M5V">
+                                                <rect key="frame" x="0.0" y="35" width="374" height="207"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rPq-3S-bgM" firstAttribute="trailing" secondItem="YRs-ba-A2G" secondAttribute="trailing" constant="20" id="BWe-cx-0P3"/>
-                            <constraint firstItem="P6O-Yr-C4d" firstAttribute="leading" secondItem="rPq-3S-bgM" secondAttribute="leading" constant="20" id="N1T-Qx-H1b"/>
-                            <constraint firstItem="ERx-64-WoI" firstAttribute="leading" secondItem="rPq-3S-bgM" secondAttribute="leading" constant="20" id="aeI-qp-dFX"/>
-                            <constraint firstItem="P6O-Yr-C4d" firstAttribute="top" secondItem="epj-U2-AA5" secondAttribute="topMargin" constant="20" id="cUW-i6-HVk"/>
-                            <constraint firstItem="rPq-3S-bgM" firstAttribute="trailing" secondItem="P6O-Yr-C4d" secondAttribute="trailing" constant="20" id="dzn-FL-0LQ"/>
-                            <constraint firstItem="rPq-3S-bgM" firstAttribute="trailing" secondItem="ERx-64-WoI" secondAttribute="trailing" constant="20" id="fru-3u-1SR"/>
-                            <constraint firstItem="YRs-ba-A2G" firstAttribute="leading" secondItem="rPq-3S-bgM" secondAttribute="leading" constant="20" id="gV7-PU-RV6"/>
-                            <constraint firstItem="YRs-ba-A2G" firstAttribute="top" secondItem="P6O-Yr-C4d" secondAttribute="bottom" constant="20" id="q8A-wQ-3rZ"/>
-                            <constraint firstItem="ERx-64-WoI" firstAttribute="top" secondItem="YRs-ba-A2G" secondAttribute="bottom" constant="20" id="yzF-q7-Kca"/>
+                            <constraint firstItem="rPq-3S-bgM" firstAttribute="trailing" secondItem="ukB-dS-mqr" secondAttribute="trailing" constant="20" id="15y-mM-YR2"/>
+                            <constraint firstItem="rPq-3S-bgM" firstAttribute="bottom" secondItem="ukB-dS-mqr" secondAttribute="bottom" constant="441" id="4r3-jh-glm"/>
+                            <constraint firstItem="ukB-dS-mqr" firstAttribute="leading" secondItem="rPq-3S-bgM" secondAttribute="leading" constant="20" id="5Ji-is-0d6"/>
+                            <constraint firstItem="ukB-dS-mqr" firstAttribute="top" secondItem="rPq-3S-bgM" secondAttribute="top" constant="10" id="hcn-m5-TTc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rPq-3S-bgM"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="sJP-DF-OED">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="YH3-Ap-kVk">
+                    <navigationItem key="navigationItem" title="Create Entry" id="OWs-Gb-f8K">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2w1-gf-io9">
                             <connections>
-                                <action selector="save:" destination="aVG-wK-7JU" id="l04-D1-5o3"/>
+                                <action selector="cancel:" destination="aVG-wK-7JU" id="9qs-TK-O0d"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="sUv-oG-5jE">
+                            <connections>
+                                <action selector="save:" destination="aVG-wK-7JU" id="y6E-PA-Q0j"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="entryTextView" destination="ERx-64-WoI" id="fdF-ev-u6C"/>
-                        <outlet property="moodControl" destination="P6O-Yr-C4d" id="FDp-9x-5XU"/>
-                        <outlet property="titleTextField" destination="YRs-ba-A2G" id="Fno-VO-A4n"/>
+                        <outlet property="entryTextView" destination="VJY-2u-M5V" id="z8b-nw-31v"/>
+                        <outlet property="moodControl" destination="bvt-g9-suU" id="SKF-r0-dcd"/>
+                        <outlet property="titleTextField" destination="aSi-eY-bmx" id="q0h-2d-Jnm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gL6-Zd-6na" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -139,8 +161,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p9U-4g-SHT" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="dd0-sI-kbj">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dd0-sI-kbj">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -154,6 +176,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nwa-Ze-Mqo"/>
+        <segue reference="5sq-GZ-NVy"/>
     </inferredMetricsTieBreakers>
 </document>
