--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -90,27 +90,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="165" id="iDM-xW-0Pv" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="165"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="56" id="iDM-xW-0Pv" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="56"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iDM-xW-0Pv" id="xrX-G6-LgE">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="165"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="k0S-A0-ksW">
-                                            <rect key="frame" x="20" y="20" width="374" height="47.5"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="k0S-A0-ksW">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="53"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="w5L-xD-dWe">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="w5L-xD-dWe">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="26.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jqw-aX-cN2">
-                                                            <rect key="frame" x="0.0" y="0.0" width="217" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jqw-aX-cN2">
+                                                            <rect key="frame" x="0.0" y="0.0" width="187" height="26.5"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Date, Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPQ-cg-TcM">
-                                                            <rect key="frame" x="217" y="0.0" width="157" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Date, Time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uPQ-cg-TcM">
+                                                            <rect key="frame" x="304" y="0.0" width="70" height="26.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -118,7 +118,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pB-LL-jTb">
-                                                    <rect key="frame" x="0.0" y="28" width="374" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="26.5" width="374" height="26.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -127,9 +127,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="k0S-A0-ksW" firstAttribute="top" secondItem="xrX-G6-LgE" secondAttribute="top" constant="20" id="Hip-M8-6oS"/>
-                                        <constraint firstAttribute="trailing" secondItem="k0S-A0-ksW" secondAttribute="trailing" constant="20" id="RH5-dk-eSl"/>
-                                        <constraint firstItem="k0S-A0-ksW" firstAttribute="leading" secondItem="xrX-G6-LgE" secondAttribute="leading" constant="20" id="ZJ4-LN-MbN"/>
+                                        <constraint firstAttribute="trailing" secondItem="k0S-A0-ksW" secondAttribute="trailing" constant="20" id="11Y-tL-FfK"/>
+                                        <constraint firstItem="k0S-A0-ksW" firstAttribute="leading" secondItem="xrX-G6-LgE" secondAttribute="leading" constant="20" id="EvB-u5-mk9"/>
+                                        <constraint firstItem="k0S-A0-ksW" firstAttribute="height" secondItem="xrX-G6-LgE" secondAttribute="height" multiplier="0.942073" id="bkL-Yw-XPb"/>
+                                        <constraint firstItem="k0S-A0-ksW" firstAttribute="top" secondItem="xrX-G6-LgE" secondAttribute="top" id="cM6-EI-MYs"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
